--- a/test.css
+++ b/test.css
@@ -21,7 +21,7 @@ h1{
     align-items: center; */
     padding: 20px 50px 20px 20px;
     float: left;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     
 }
 .content{
